deployment/localhost-k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: claude-computer-use
  labels:
    app: frontend
spec:
  replicas: 1 # Increased from 1 to 3 replicas
  selector:
    matchLabels:
      app: frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: localhost:5000/frontend:1.0
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "600m"
              memory: "400Mi"
            limits:
              cpu: 1 # 1 cores
              memory: "400Mi" # 1 Gi
            # requests:
            #   cpu: "200m"
            #   memory: "128Mi"
            # limits:
            #   cpu: "200m"
            #   memory: "300Mi"
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: claude-computer-use
spec:
  selector:
    app: frontend
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
